[package]
name = "yew-bulma"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "A Yew component library based on the Bulma CSS framework."
categories = ["wasm", "web-programming"]
keywords = ["wasm", "web", "bulma", "sass", "yew"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
calendar = ["chrono"]
chart = ["chrono"]
default = ["calendar", "chart"]

[dependencies]
derive_more = { version = "1.0", features = ["display"] }
bytes = "1.7"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
petgraph = { version = "0.6", features = ["serde-1"] }
yew = "0.21"
yew-agent = "0.2"
gloo-utils = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = { version = "0.6", optional = true }
web-sys = { version = "0.3", features = ["File", "HtmlSelectElement", "HtmlTextAreaElement", "HtmlInputElement", "Request",
    "HtmlFormElement", 'RequestInit', 'RequestMode', 'Response', "WebSocket", "Node", "Element", "NodeList",
    "BinaryType", "CloseEvent", "ErrorEvent", "MessageEvent", "KeyboardEvent", "Headers"] }
js-sys = "0.3"
# this project
#nio-mqtt = { path = "../nio-mqtt", default-features = false, features = ["packets-only"] }
# optional
chrono = { version = "0.4", features = ["wasmbind"], optional = true }
